# ComfyUI-TRELLIS-HiCache

./: README.md  nodes.py  pyproject.toml  trellis_hicache_patch.py
tests/: test_patch.py  validate_gpu.py
